manifest/supabase/studio-ingress.yaml
---
# Source: supabase/templates/studio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: supabase-supabase-studio
  namespace: currently-working-on-db
  labels:
    helm.sh/chart: supabase-0.0.2
    app.kubernetes.io/name: supabase
    app.kubernetes.io/instance: supabase
    app.kubernetes.io/managed-by: Helm
spec:
  tls:
    - hosts:
        - currently-working-on-db.trueberryless.org
      secretName: currently-working-on-db
  rules:
    - host: currently-working-on-db.trueberryless.org
      http:
        paths:
          - path: /studio/
            pathType: Prefix
            backend:
              service:
                name: supabase-supabase-studio
                port:
                  number: 3000
